@@ -23,7 +23,7 @@ import static com.google.common.truth.Truth.assertThat;
 
 import java.io.InputStream;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.List;
 
 import org.apache.commons.io.IOUtils;
@@ -59,7 +59,7 @@ public class XmlMetaReaderTest extends AbstractPathTestSupport {
     @Test
     public void testReadXmlMetaCheckWithProperties() throws Exception {
         final String path = getPath("InputXmlMetaReaderCheckWithProps.xml");
-        try (InputStream is = Files.newInputStream(Paths.get(path))) {
+        try (InputStream is = Files.newInputStream(Path.of(path))) {
             final ModuleDetails result = XmlMetaReader.read(is, ModuleType.CHECK);
             checkModuleProps(result, ModuleType.CHECK, "Some description for check",
                 "com.puppycrawl.tools.checkstyle.checks.misc.InputCheck",
@@ -86,7 +86,7 @@ public class XmlMetaReaderTest extends AbstractPathTestSupport {
     @Test
     public void testReadXmlMetaCheckNoProperties() throws Exception {
         final String path = getPath("InputXmlMetaReaderCheckNoProps.xml");
-        try (InputStream is = Files.newInputStream(Paths.get(path))) {
+        try (InputStream is = Files.newInputStream(Path.of(path))) {
             final ModuleDetails result = XmlMetaReader.read(is, ModuleType.CHECK);
             checkModuleProps(result, ModuleType.CHECK,
                 "Some description for check with no properties",
@@ -104,7 +104,7 @@ public class XmlMetaReaderTest extends AbstractPathTestSupport {
     @Test
     public void testReadXmlMetaFilter() throws Exception {
         final String path = getPath("InputXmlMetaReaderFilter.xml");
-        try (InputStream is = Files.newInputStream(Paths.get(path))) {
+        try (InputStream is = Files.newInputStream(Path.of(path))) {
             final ModuleDetails result = XmlMetaReader.read(is, ModuleType.FILTER);
             checkModuleProps(result, ModuleType.FILTER, "Description for filter",
                 "com.puppycrawl.tools.checkstyle.filters.SomeFilter",
@@ -123,7 +123,7 @@ public class XmlMetaReaderTest extends AbstractPathTestSupport {
     @Test
     public void testReadXmlMetaFileFilter() throws Exception {
         final String path = getPath("InputXmlMetaReaderFileFilter.xml");
-        try (InputStream is = Files.newInputStream(Paths.get(path))) {
+        try (InputStream is = Files.newInputStream(Path.of(path))) {
             final ModuleDetails result = XmlMetaReader.read(is, ModuleType.FILEFILTER);
             checkModuleProps(result, ModuleType.FILEFILTER,
                 "File filter description",
